--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
-<body>
+<body style="margin-top: 30px">
 <center>
-    <form method="post" action="/weather">
+    <form method="post"  action="/weather">
         Enter the city name: <input type="text" th:name="city" placeholder="Name of the city"/>
         <input type="submit" value="Check it">
+
     </form>
     <br/>
     <br/>
