--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -6,17 +6,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <body style="margin-top: 30px">
+
 <center>
-    <form method="post"  action="/weather">
-        Enter the city name: <input type="text" th:name="city" placeholder="Name of the city"/>
-        <input type="submit" value="Check it">
-
+    <h1>Check the weather in Your city for five days</h1>
+    <hr/>
+    <div style="width: 450px; height: 60px; border: 1px solid dodgerblue; padding: 10px; background: lightcyan;
+        box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.4);">
+    <form method="post" action="/weather">
+        <strong>Enter the city :</strong> <input type="text" th:name="city" placeholder="Name of the city"/>
+        <button type="submit" class="btn btn-primary">Check it</button>
     </form>
+    </div>
     <br/>
     <br/>
-
-
 </center>
+
 
 </body>
 </html>
