--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -8,7 +8,7 @@
 <body style="margin-top: 30px">
 
 <center>
-    <h1>Check the weather in Your city for five days</h1>
+    <h1 id="h1">Check the weather in Your city for five days</h1>
     <hr/>
     <div style="width: 450px; height: 60px; border: 1px solid dodgerblue; padding: 10px; background: lightcyan;
         box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.4);">
