--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -10,6 +10,9 @@
 <center>
     <h1 id="h1">Check the weather in Your city for five days</h1>
     <hr/>
+    <div th:if="${wrongCity != null}" class="alert alert-danger">
+        <h1 th:text="${wrongCity}"></h1>
+    </div>
     <div style="width: 450px; height: 60px; border: 1px solid dodgerblue; padding: 10px; background: lightcyan;
         box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.4);">
     <form method="post" action="/weather">
