--- a/src/main/resources/templates/cityweather.html
+++ b/src/main/resources/templates/cityweather.html
@@ -8,11 +8,11 @@
 <body style="margin: 40px; background: lightcyan">
 <div style="border: 1px solid dodgerblue; padding: 10px; background: white;
         box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.4);">
-    <b><i><h1 th:text="${cityName.getCity().toUpperCase()}"></h1></i></b>
-    <table class="table table-striped">
+    <h1 style="font-weight: 900" th:text="${cityName.getCity().toUpperCase()}"></h1>
+    <table class="table table-hover">
         <thead>
-        <tr style="text-align: center">
-            <th scope="col">Date [yy-mm-dd]</th>
+        <tr style="text-align: center; color: white" class="bg-primary">
+            <th scope="col">Date [yy-mm-dd (hour)]</th>
             <th scope="col">Temperature [<sup>o</sup>C]</th>
             <th scope="col">Pressure [hPa]</th>
             <th scope="col">Humidity [%]</th>
