--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -16,8 +16,8 @@
     <div style="width: 450px; height: 60px; border: 1px solid dodgerblue; padding: 10px; background: lightcyan;
         box-shadow: 0px 6px 4px 1px rgba(0, 0, 0, 0.4);">
     <form method="post" action="/weather">
-        <strong>Enter the city :</strong> <input type="text" th:name="city" placeholder="Name of the city"/>
-        <button type="submit" class="btn btn-primary">Check it</button>
+        <strong style="margin-right: 5px">Enter the city :</strong> <input type="text" th:name="city" />
+        <button style="margin-left: 5px" type="submit" class="btn btn-primary">Check it</button>
     </form>
     </div>
     <br/>
